tensorflow 0.10 and tensorboard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,14 @@ main:
    - ./notebook:/data
   ports:
    - "8888:8888"
+board:
+  build: .
+  entrypoint:
+    - "tensorboard"
+  command: "--logdir=/data/logs/"
+  environment:
+      PYTHONUNBUFFERED: 0
+  volumes:
+   - ./notebook:/data
+  ports:
+   - "6006:6006"
